# URL_shortener

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial.py  20260323_000001_create_short_urls_table.py
app/: auth.py  config.py  constants.py  database.py  db.py  exceptions.py  logger.py  middleware.py  models.py  rate_limit.py  redis_client.py  schemas.py  services.py  storage.py
app/core/: config.py
app/routers/: __init__.py  redirect.py  urls.py
tests/: test_integration.py  test_services.py  test_urls.py
