[project]
name = "url-shortener2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.5",
    "fastapi>=0.135.1",
    "asyncpg>=0.30.0",
    "pydantic-settings>=2.11.0",
    "python-dotenv>=1.2.2",
    "redis>=6.4.0",
    "sqlalchemy>=2.0.48",
    "uvicorn>=0.37.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[dependency-groups]
dev = [
    "aiosqlite>=0.21.0",
    "httpx>=0.28.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
]
